--- a/sbc-template.bib
+++ b/sbc-template.bib
@@ -75,8 +75,8 @@
     title = {Orientação de TCC},
     author = {Suellen Sotille Spinello},
     year = {2024},
-    howpublished = {Disponível em: \url{...}},
-    note = {Acesso em: 01 jan. 2024},
+    url = {http://www.atitus.edu.br},    
+    urldate = {2024-01-01}
 }
 
 %%% Fim das referências de exemplo
