Corrige formatação e adiciona informações faltantes nas referências bibliográficas

--- a/sbc-template.bib
+++ b/sbc-template.bib
@@ -62,12 +62,12 @@
 %% Livro online (e-book)
 @book{rabello2010,
     title = {Promoção da saúde: a construção social de um conceito em perspectiva comparada}, 
-    location = {Rio de Janeiro},
-    publisher = {Editora FIOCRUZ},
     author = {Rabello, Lucíola Santos},
+    location = {Rio de Janeiro},
+    publisher = {Editora FIOCRUZ},    
     year = {2010},
     pagetotal = {228},
-    url = {http://dx.doi.org/10.7476/9788575413524}
+    url = {http://dx.doi.org/10.7476/9788575413524},
 }
 
 %% Publicação genérica
@@ -75,8 +75,8 @@
     title = {Orientação de TCC},
     author = {Suellen Sotille Spinello},
     year = {2024},
-    url = {http://www.atitus.edu.br},    
-    urldate = {2024-01-01}
+    url = {http://www.atitus.edu.br},
+    urldate = {2024-01-01},
 }
 
 %%% Fim das referências de exemplo
