Atualização do README e comentários no início do arquivo tex

--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -48,13 +48,10 @@
 %
 % SOBRE CITAÇÕES:
 % Para citar no padrão '(Autores, ano)' use: \cite{chave}
-% Para citar no padrão 'Autores (ano)'  use: \textcite{chave} ou \citeonline{chave}
+% Para citar no padrão 'Autores (ano)'  use: \textcite{chave}
 % Para citar no padrão 'Autores'        use: \citelastname{chave}
-% Para citar no padrão 'Autor (ano), Autor (ano) e Autor (ano)' use: \textcites{chave1}{chave2}{chave3}
-% Para citar no padrão '(Autor, 2009c; Outro Autor, 2009; Outro Autor, 2015)' use: 
-%  \cites{chave1}{chave2}{chave3}
-%  ou
-%  \cite{chave1, chave2, chave3}
+% Para citar no padrão 'Autor (ano), Autor (ano) e Autor (ano)' use: \textcite{chave1,chave2,chave3}
+% Para citar no padrão '(Autor, 2009c; Outro Autor, 2009; Outro Autor, 2015)' use: \cite{chave1, chave2, chave3}
 
 % Demais exemplos ver documento:
 %  https://github.com/abntex/biblatex-abnt/raw/master/doc/biblatex-abnt.pdf
@@ -119,7 +116,7 @@ No trabalho de \textcite{souza2020} ...
 
 No artigo de \textcite{estevao2023} ...
 
-Nos trabalhos de \textcites{badgujar2024}{estevao2023} são aplicadas técnicas de ...
+Nos trabalhos de \textcite{badgujar2024, estevao2023} são aplicadas técnicas de ...
 
 \textsc{Citação direta longa devem ser evitadas em artigos científicos!}
 
